--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>虚拟地产 - 6字母域名：长/短期租赁 、投资于项目、出售</h1>
         <p class="domain-name">yimote.com</p>
         <p class="suggested-businesses">可租用此域名做短期性质业务 如 电子推广、会展、节假日活动、季节性安排</p>       
-        
+          <p class="domain-name">"一模特”， “衣模特”，“怡摩特”</p>  
   	<p class="suggested-businesses">潜在的发音字 和 字句</p>       
         <ul class="suggested-businesses">
 
@@ -54,7 +54,7 @@
             <li>mo - 膜，莫，摸，么，魔，磨，墨，末，抹，默</li>  
  	   <li>te - 特，忑</li>  
 
-  <li>"一模特”， “衣模特”，“怡摩特”</li>  
+
 
 
             
